tests/examples/importing/errors/multiple_defs/first_setup.si
service-registry ServiceRegistry{
    client_mode=False
    deployment {
        version="0.0.1"
        port=9091
        url="http://loc_reg"
    }
}